# api-security-tester

./: .gitignore  CODE_IMPROVEMENTS.md  COMPLETE_UPDATE_SUMMARY.md  ENHANCEMENTS.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  start.bat  start.py  start.sh
backend/: app.py  requirements.txt
backend/src/: __init__.py
backend/src/api/: main.py
backend/src/api/routes/: health.py  reports.py  results.py  testing.py  upload.py  websocket_routes.py
backend/src/auth/: __init__.py  analyzer.py  handler.py
backend/src/data/: __init__.py
backend/src/parser/: __init__.py  models.py  openapi_parser.py
backend/src/reporting/: __init__.py  report_generator.py  report_manager.py  result_storage.py
backend/src/reporting/templates/: executive_report.html
backend/src/testing/: __init__.py  data_generator.py  data_manager.py  detector_base.py  models.py  statistics.py  test_manager.py
backend/src/testing/detectors/: __init__.py  advanced_detectors.py  basic_detectors.py  injection_detectors.py  owasp_additional.py  owasp_final.py  owasp_top10.py  role_based_auth.py
backend/src/utils/: config.py  dependencies.py
backend/src/websocket/: __init__.py  manager.py  notifications.py
backend/tests/: test_enhanced_detectors.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
frontend/src/components/: Header.tsx  Sidebar.tsx  SpecUpload.tsx  TestMonitor.tsx
frontend/src/pages/: HomePage.tsx  ResultsPage.tsx  TestMonitorPage.tsx  TestingPage.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/types/: index.ts
