[tool.poetry]
name = "api-security-tester"
version = "0.1.0"
description = "Professional API Security Testing Tool for Penetration Testers"
authors = ["API Security Tester Team"]
readme = "README.md"
packages = [{include = "src", from = "backend"}]

[tool.poetry.dependencies]
python = "^3.9"
# Web Framework
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
websockets = "^12.0"

# HTTP Client and Testing
requests = "^2.31.0"
httpx = "^0.25.0"
aiohttp = "^3.9.0"

# OpenAPI/Swagger Processing
openapi3 = "^4.2.2"
prance = "^23.6.21"
swagger-spec-validator = "^3.0.3"
apispec = "^6.3.0"

# Security Testing
pyjwt = "^2.8.0"
cryptography = "^41.0.0"
pycryptodome = "^3.19.0"

# Test Data Generation
faker = "^20.1.0"
hypothesis = "^6.88.0"
factory-boy = "^3.3.0"

# Async and Concurrent Testing
pytest-asyncio = "^0.22.0"
aiofiles = "^23.2.1"
asyncio-throttle = "^1.0.2"

# Database and Storage
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
aiosqlite = "^0.19.0"

# Reporting and Analysis
jinja2 = "^3.1.0"
plotly = "^5.17.0"
pandas = "^2.1.0"
markdown = "^3.5.0"

# Configuration and CLI
click = "^8.1.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
rich = "^13.7.0"
typer = "^0.9.0"
psutil = "^5.9.0"

# CORS support for frontend
fastapi-cors = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true